--- a/Views/Pages/PagamentosPages/CadastroEmpresa.cshtml
+++ b/Views/Pages/PagamentosPages/CadastroEmpresa.cshtml
@@ -10,10 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="~/css/PagamentosStyles/payment.css" />
   <link rel="stylesheet" href="~/css/PagamentosStyles/main.css" />
 </head>
-
 
 <div class="doc-card">
   <div class="doc-header">
@@ -36,19 +34,19 @@
 
   <form id="formWizard">
     <div id="stepContentContainer">
+      <input type="hidden" asp-for="PlanoPago" />
     </div>
 
     <div class="wizard-nav">
       <button type="button" class="btn btn-outline-secondary" id="prevBtn" disabled>« Anterior</button>
-      <button type="button" class="btn btn-primary" id="nextBtn">Próximo »</button>
+      <button type="button" class="btn" id="nextBtn">Próximo »</button>
     </div>
   </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 <script src="~/js/PagamentoScript/main.js"></script>
 <script src="~/js/PagamentoScript/step2.js"></script>
 <script src="~/js/PagamentoScript/step3.js"></script>
 <script src="~/js/PagamentoScript/step4.js"></script>
 <script src="~/js/PagamentoScript/step5.js"></script>
-<script src="~/js/PagamentoScript/creditCard.js"></script>
-<script src="~/js/PagamentoScript/pixPayment.js"></script>
