--- a/Views/Shared/DocumentosPartial/Step1.cshtml
+++ b/Views/Shared/DocumentosPartial/Step1.cshtml
@@ -1,5 +1,27 @@
 @model VoxDocs.DTO.DTOCadastroEmpresa
 
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+
+<style>
+    /*Coloração do botão*/
+  .btn{
+    background-color: #5c3c8a;
+    color: #fff;
+    border: none;
+  }
+
+  .btn:hover{
+    background-color: #5c3c8a;
+    color: #fff;
+    transform: translateY(-2px);
+  }
+</style>
+
 <div class="step-content active" data-step="1">
   <div class="mb-3">
     <label for="EmpresaContratante" class="form-label">Nome da Empresa</label>
